# coolify

./: .coolify-logo  .dockerignore  .env.cloud  .env.development  .env.development.example  .env.dusk.ci  .env.example  .env.production  .env.production.example  .env.secrets.example  .env.template  .env.testing  .env.windows-docker-desktop.example  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .lintstagedrc.json  .prettierignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  CONTRIBUTION_NEW.md  Dockerfile  Dockerfile-dev  LICENSE  README.md  RELEASE.md  SECURITY.md  TECH_STACK.md  TODO.md  cliff.toml  cloudbuild.yaml  components.json  composer.json  coolify.schema.json  coolify_id25519  csb.nix  (+49 more)
templates/Epicyon/epicyon-data/: 2grams.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README_architecture.md  README_coding_style.md  README_commandline.md  README_customizations.md  README_desktop_client.md  README_goals.md  README_keyboard_navigation.md  README_roadmap.md  acceptreject.py  announce.py  art.py  auth.py  availability.py  blocking.py  blog.css  blog.py  bookmarks.py  briar.py  cache.py  caddy.example.conf  calendar.css  categories.py  city.py  code-of-conduct.md  config.json  content.py  context.py  conversation.py  crawlers.py  cwlists.py  cwtch.py  daemon.py  daemon_get.py  daemon_get_blog.py  daemon_get_buttons.py  daemon_get_buttons_announce.py  (+190 more)
templates/Epicyon/epicyon-data/accounts/: .tokenUpdate  categoryList.txt  fitness.json  headers_catalog.json  help_dm.md  help_inbox.md  help_outbox.md  passwords  (+12 more)
(+5027 files in other folders)
