[metadata]
name = epicyon
version = 1.3.0
author = Bob Mottram
author_email = bob@libreserver.org
maintainer = Bob Mottram
maintainer_email = bob@libreserver.org
description = A modern ActivityPub compliant server implementing both S2S and C2S protocols.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = epicyon, activitypub, fediverse
license = GNU Affero General Public License v3
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = .
scripts =
  deploy/i2p
  deploy/onion
install_requires =
  idna >= 2.5, < 3
  numpy >= 1.20.0, < 2
  pillow >= 8.1.0, < 9
  cryptography >= 3.3.1, < 4
  pyqrcode >= 1.2.1, < 2
  python-dateutil >= 2.8.1, < 3
  requests >= 2.25.1, < 3
  socks  # no versions https://pypi.org/project/socks/

[options.package_data]
* =
  *.css
  *.txt
  defaultcategories/*
  emoji/*
  fonts/*
  gemini/*
  img/*
  orgs/*
  theme/**/*
  theme/**/**/*
  translations/*
  website/*
